<resources>
    <string name="app_name">Successorator</string>
    <string name="move_to_today">Move to Today</string>
    <string name="move_to_tomorrow">Move to Tomorrow</string>
    <string name="finish">Finish</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="errand">Errand</string>
    <string name="home">Home</string>
    <string name="school">School</string>
    <string name="work">Work</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>