<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasklist.dialog.ChangeTaskModeDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/move_to_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_to_today" />

            <Button
                android:id="@+id/move_to_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_to_tomorrow" />

            <Button
                android:id="@+id/finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish" />

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>