<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasklist.FocusMenuFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/home_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/home_focus_color"
            android:text="@string/home"
            android:textAlignment="center"
            android:textSize="34sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/work_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/work_focus_color"
            android:text="@string/work"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Button
            android:id="@+id/school_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/school_focus_color"
            android:text="@string/school"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Button
            android:id="@+id/errand_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/errand_focus_color"
            android:text="@string/errand"
            android:textAlignment="center"
            android:textSize="34sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>